pa10/tests/type_error/binop_mismatch.uC
int main() {
	int a;
	float b;
	a = 1;
	b = 2.0;
	a = a + b;
	return 0;
}
